# Miaoyan-tauri

./: .gitignore  MIGRATION_GUIDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
public/: preview.html
public/css/: base.css  theme-dark.css  typography.css
public/js/: common.js
scripts/: miaoyan
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: cloud_sync.rs  encryption.rs  mod.rs  storage.rs  watcher.rs
src/components/editor/: ContextMenu.tsx  Editor.tsx
src/components/editor/extensions/: image-paste.ts  image-preview.ts  smart-lists.ts  tab-snippets.ts  text-formatting.ts  wikilink.ts
src/components/notes-list/: NotesList.tsx
src/components/presentation/: PresentationMode.tsx
src/components/preview/: Preview.tsx
src/components/settings/: SettingsDialog.tsx
src/components/shared/: Backlinks.tsx  EncryptionDialog.tsx  ExportMenu.tsx  SyncStatus.tsx  TableOfContents.tsx  Toast.tsx  UpdateDialog.tsx  VersionHistory.tsx
src/components/sidebar/: CombinedSidebar.tsx  FolderPane.tsx  NoteListPane.tsx  Sidebar.tsx
src/i18n/: en.json  es.json  index.ts  ja.json  zh-Hans.json  zh-Hant.json
src/services/: formatter.ts  logger.ts  tauri-bridge.ts
src/stores/: editor-store.ts  notes-store.ts  settings-store.ts
src/styles/: globals.css
src/types/: index.ts
