[package]
name = "miaoyan"
version = "1.0.0"
description = "A cross-platform Markdown editor"
authors = ["MiaoYan"]
edition = "2021"

[lib]
name = "miaoyan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
trash = "5"
pulldown-cmark = { version = "0.12", features = ["simd"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

